--- a/movies_java_sxy/WebContent/index.css
+++ b/movies_java_sxy/WebContent/index.css
@@ -7,7 +7,7 @@ html,body{
 
 padding-right:5%;
 padding-left:5%;
-background:url("../img/1.jpg");
+background:white ;
 
 justify-content:center;
 align-items:center;
@@ -176,7 +176,10 @@ $(function() {
       margin-right: auto;
       padding-top:50px;
       padding-bottom:50px;
+      
     }
+    
+
 
     .swiper-slide {
       text-align: center;
@@ -196,6 +199,6 @@ $(function() {
       -ms-flex-align: center;
       -webkit-align-items: center;
       align-items: center;
-      background:#000
-      -webkit-box-reflect:below 1px linear-gradient(transparent,transparent,#0006);
+      
+      
     }
